@@ -48,11 +48,26 @@ no_categories_for_chooser "No Sites are defined.  You must add a Site before you
 
   selected_stories_deleted  "The selected stories have been deleted."
 
-  selected_stories_checkout  "The selected stories have been checked out to your Workspace"
+  selected_stories_checkout "The selected stories have been checked out to your Workspace."
 
   selected_stories_checkin  "The selected stories have been checked in."
 
   selected_stories_checkout_one  "The selected story has been checked out.  (In the future, if you want to check out only one story you can also click 'Edit'.)"
+
+  selected_story_stolen "Story ID $id has been stolen from $victim and opened for edit."
+
+  selected_story_yours "Story ID $id was already checked out to you; it has been opened for edit."
+
+  multiple_stories_stolen "Story IDs $ids have been stolen (from $victims) and moved to your Workspace."
+
+  multiple_stories_yours "Story IDs $ids were already checked out to you."
+
+  one_story_stolen "Story ID $id has been stolen from $victim and moved to your Workspace."
+
+  one_story_yours "Story ID $id was already checked out to you."
+
+  all_selected_stories_yours "The selected stories were all checked out to you; switching to Workspace view."
+
   cancel_new_story "Canceled story creation."
 
   missing_category_on_save "You must choose at least one site/category for your story."
